src/ledgersvc/build/k8s/base/serverd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serverd
  labels:
    app.kubernetes.io/name: serverd
    app.kubernetes.io/instance: serverd
    app.kubernetes.io/component: serverd
spec:
  revisionHistoryLimit: 3
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: serverd
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: "50%"
      maxUnavailable: "25%"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: serverd
        app.kubernetes.io/instance: serverd
        app.kubernetes.io/component: serverd
    spec:
      serviceAccountName: deploy
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: serverd
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          privileged: false
          readOnlyRootFilesystem: true
        image: image-serverd:unknown
        command: ["./serverd"]
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "50mi"
          limits:
            memory: "128Mi"
            cpu: "100mi"
            ephemeral-storage: "64Gi"
        livenessProbe:
          httpGet:
            path: /_/ping
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /_/ready
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: serverd
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: serverd
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
